Made some changes to the design of the footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,52 @@
 <footer class="page-footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-8 col-sm-12">
-                <h6 class="text-uppercase font-weight-bold">Additional Information</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-12">
-            <h6 class="text-uppercase font-weight-bold">Contact</h6>
-            <p>1640 Riverside Drive, Hill Valley, California
-            <br/>info@mywebsite.com
-            <br/>+ 01 234 567 88
-            <br/>+ 01 234 567 89</p>
-        </div>
-    <div>
-    <div class="footer-copyright text-center">© 2020 Copyright: MyWebsite.com</div>
+  <div class="container">
+      <div class="row">
+          <div class="col-md-5">
+              <h5><i class="fa fa-road"></i> ACME CO INC.</h5>
+              <div class="row">
+                  <div class="col-6">
+                      <ul class="list-unstyled">
+                          <li><a href="">Product</a></li>
+                          <li><a href="">Benefits</a></li>
+                          <li><a href="">Partners</a></li>
+                          <li><a href="">Team</a></li>
+                      </ul>
+                  </div>
+                  <div class="col-6">
+                      <ul class="list-unstyled">
+                          <li><a href="">Documentation</a></li>
+                          <li><a href="">Support</a></li>
+                          <li><a href="">Legal Terms</a></li>
+                          <li><a href="">About</a></li>
+                      </ul>
+                  </div>
+              </div>
+              <ul class="nav">
+                  <li class="nav-item"><a href="" class="nav-link pl-0"><i class="fa fa-facebook fa-lg"></i></a></li>
+                  <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-twitter fa-lg"></i></a></li>
+                  <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-github fa-lg"></i></a></li>
+                  <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a></li>
+              </ul>
+              <br>
+          </div>
+          <div class="col-md-2">
+              <h5 class="text-md-right">Contact Us</h5>
+              <hr>
+          </div>
+          <div class="col-md-5">
+              <form>
+                  <fieldset class="form-group">
+                      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                  </fieldset>
+                  <fieldset class="form-group">
+                      <textarea class="form-control" id="exampleMessage" placeholder="Message"></textarea>
+                  </fieldset>
+                  <fieldset class="form-group text-xs-right">
+                      <button type="button" class="btn btn-secondary-outline btn-lg">Send</button>
+                  </fieldset>
+              </form>
+          </div>
+          <div class="footer-copyright">© 2017 Copyright: electorials.com</div>
+      </div>
+  </div>
 </footer>
