--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -468,9 +468,19 @@ footer {
     max-width: 100%;
     /* ^^^ These three rules bring the footer close to how the main content is
     laid out. */
-    text-align: center;
-    background-color: white;
+    text-align: left;
     font-family: 'Lato', sans-serif;
+}
+
+footer a {
+  color: #999;
+  text-decoration:none;
+}
+
+footer a:hover, footer a:focus {
+  color: #aaa;
+  text-decoration:none;
+  border-bottom:1px dotted #999;
 }
 
 footer > div {
@@ -478,8 +488,8 @@ footer > div {
 }
 
 .page-footer {
-    background-color: #222;
-    color: #ccc;
+    background-color: #292c2f;
+    color: #bbb;
     padding: 30px 0 20px;
 }
 
