--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
       <div class="row">
           <div class="col-md-5">
-              <h5><i class="fa fa-road"></i> ACME CO INC.</h5>
+              <h5><i class="fa fa-road"></i> Electorials</h5>
               <div class="row">
                   <div class="col-6">
                       <ul class="list-unstyled">
@@ -29,24 +29,7 @@
               </ul>
               <br>
           </div>
-          <div class="col-md-2">
-              <h5 class="text-md-right">Contact Us</h5>
-              <hr>
-          </div>
-          <div class="col-md-5">
-              <form>
-                  <fieldset class="form-group">
-                      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-                  </fieldset>
-                  <fieldset class="form-group">
-                      <textarea class="form-control" id="exampleMessage" placeholder="Message"></textarea>
-                  </fieldset>
-                  <fieldset class="form-group text-xs-right">
-                      <button type="button" class="btn btn-secondary-outline btn-lg">Send</button>
-                  </fieldset>
-              </form>
-          </div>
-          <div class="footer-copyright">© 2017 Copyright: electorials.com</div>
+          <div class="footer-copyright">© 2017 Electorials</div>
       </div>
   </div>
 </footer>
