--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -496,6 +496,7 @@ footer > div {
 .footer-copyright {
     color: #666;
     padding: 0px 0;
+    text-align: center;
 }
 
 /* For screens whose resolution width is 800px or greater */
