--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
       <div class="row">
           <div class="col-md-5">
-              <h5><i class="fa fa-road"></i> Electorials</h5>
+              <h5><i class="fa fa-road"></i> ELECTORIALS</h5>
               <div class="row">
                   <div class="col-6">
                       <ul class="list-unstyled">
@@ -22,7 +22,7 @@
                   </div>
               </div>
               <ul class="nav">
-                  <li class="nav-item"><a href="" class="nav-link pl-0"><i class="fa fa-facebook fa-lg"></i></a></li>
+                  <li class="nav-item"><a href="" class="nav-link pl-0"><i class="far fa-envelope"></i></a></li>
                   <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-twitter fa-lg"></i></a></li>
                   <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-github fa-lg"></i></a></li>
                   <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a></li>
