--- a/_layouts/grid.html
+++ b/_layouts/grid.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="/assets/css/normalize-8.0.1.css">
         <link rel="stylesheet" href="/assets/css/styles-grid.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/f054bd0c06.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
