--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -474,17 +474,26 @@ footer {
 
 footer a {
   color: #999;
-  text-decoration:none;
+  text-decoration: none;
 }
 
 footer a:hover, footer a:focus {
   color: #aaa;
-  text-decoration:none;
-  border-bottom:1px dotted #999;
+  text-decoration: none;
+  border-bottom: 1px dotted #999;
 }
 
 footer > div {
     margin: auto;
+}
+
+i.far {
+  color: #bbb;
+  font-size: 20px;
+}
+
+i.fa {
+  color: #bbb;
 }
 
 .page-footer {
