--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,10 +22,10 @@
                   </div>
               </div>
               <ul class="nav">
-                  <li class="nav-item"><a href="" class="nav-link pl-0"><i class="far fa-envelope"></i></a></li>
-                  <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-twitter fa-lg"></i></a></li>
+                  <li class="nav-item"><a href="" class="nav-link pl-0"><i class="far fa-envelope fa-lg"></i></a></li>
+                  <li class="nav-item"><a href="" class="nav-link"><i class="fab fa-youtube fa-lg"></i></a></li>
                   <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-github fa-lg"></i></a></li>
-                  <li class="nav-item"><a href="" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a></li>
+                  <li class="nav-item"><a href="" class="nav-link"><i class="fab fa-discord fa-lg"></i></a></li>
               </ul>
               <br>
           </div>
