- Reduced the text bottom margin for the grid squares. - Altered the wording & styling for the contact page. - Changed the styling of the contact form (removed placeholders).

--- a/assets/css/styles-grid.css
+++ b/assets/css/styles-grid.css
@@ -55,6 +55,7 @@
 .grid-item p {
     line-height: 1.25rem;
     padding: .5rem .75rem;
+    margin-bottom: 0rem;
 }
 
 /* For screens whose resolution width is 800px or greater */
