- Altered the contact page text. - Added a slight margin (indent) within the input boxes to the contact form. - Reduced the section border margin from 3.125rem to 3rem. - Made changes to the Arduino Setup page.

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -46,6 +46,7 @@
                 width: 100%;
                 max-width: calc(var(--main-content-width) * .4);
                 /* --main-content-width comes from styles.css. */
+                text-indent: 0.3rem;
             }
 
             .names {
