--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -507,6 +507,15 @@ p {
   margin-bottom: 0rem !important;
 }
 
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 50%; /* This may need to change according to no. of images. */
+  padding: 5px;
+}
+
 /* For screens whose resolution width is 800px or greater */
 @media only screen and (min-width: 800px) {
     :root {
