- Made slight padding changes to the menu items. - Reduced the grid item border size to .3 rem & the grid item padding to .2 rem.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,7 +91,7 @@ nav {
 .menu-item a {
     --item-width: 100%;
     display: flex;
-    padding: .125rem .875rem;
+    padding: .125rem 0rem;
     font-size: .875em;
     width: var(--item-width);
     transform: translateX(calc((100% - var(--item-width)) / 2 ));
@@ -495,7 +495,7 @@ i {
 .page-footer {
     background-color: #292c2f;
     color: #bbb;
-    padding: 30px 0 10px;
+    padding: 25px 0 10px;
 }
 
 .footer-copyright {
