--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -18,6 +18,9 @@
 
         <link rel="stylesheet" href="/assets/css/normalize-8.0.1.css">
         <link rel="stylesheet" href="/assets/css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&amp;display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/f054bd0c06.js" crossorigin="anonymous"></script>
     </head>
