--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -45,7 +45,7 @@
     <script src="/assets/css/jquery.slicknav.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
-            $('#menu').slicknav();
+            $('.menu').slicknav();
         });
     </script>
 </html>
