--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -45,7 +45,10 @@
     <script src="/assets/css/jquery.slicknav.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
-            $('.menu').slicknav();
+            $('.menu').slicknav({
+                prependTo:'#nav'
+            });
         });
+      
     </script>
 </html>
