--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav id="nav">
     <a href="/" class="logo"><img src="/assets/img/electorials-logo.svg" alt="Electorials Logo"></a>
     <ul class="menu">
         {% for item in site.data.navigation %}
