--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,3 +33,13 @@
       </div>
   </div>
 </footer>
+<script src="/assets/css/jquery.min.js"></script>
+<script src="/assets/css/jquery.slicknav.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('.menu').slicknav({
+            prependTo:'#nav'
+        });
+    });
+
+</script>
